[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/CityProductionPanel.gd" id="1"]

[node name="CityProductionPanel" type="PanelContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -240.0
offset_right = 200.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/TitleBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "City Production"

[node name="CloseButton" type="Button" parent="VBox/TitleBar"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="Separator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="CityInfo" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Population: 1 | Production: 5/turn"

[node name="Separator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="QueueSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="QueueLabel" type="Label" parent="VBox/QueueSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Production Queue:"

[node name="QueueList" type="ItemList" parent="VBox/QueueSection"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
allow_reselect = true

[node name="QueueButtons" type="HBoxContainer" parent="VBox/QueueSection"]
layout_mode = 2
alignment = 1

[node name="MoveUpButton" type="Button" parent="VBox/QueueSection/QueueButtons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
disabled = true
text = "Up"

[node name="MoveDownButton" type="Button" parent="VBox/QueueSection/QueueButtons"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
disabled = true
text = "Down"

[node name="RemoveButton" type="Button" parent="VBox/QueueSection/QueueButtons"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
disabled = true
text = "Remove"

[node name="Separator3" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="AvailableSection" type="VBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AvailableLabel" type="Label" parent="VBox/AvailableSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Available (double-click to add):"

[node name="AvailableList" type="ItemList" parent="VBox/AvailableSection"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
